--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         return html`
             <div class="header">
                 <div class="container flex">
-                    <img src="logo.png" alt="" />
+                    <img src="logo.png" alt="" width="102" height="36">
                     <div class="hamburger"></div>
                     <div class="menu">
                         <div class="menu-item">
