--- a/remont-macbook.html
+++ b/remont-macbook.html
@@ -21,7 +21,7 @@
 
     const { render, h } = setup;
 
-    render(h(() => PricesPage({ type: "", models, bottomText })), document.body);
+    render(h(() => PricesPage({ type: "MacBook", models, bottomText })), document.body);
 </script>
 </body>
 </html>
