update ipad page

--- a/remont-ipad.html
+++ b/remont-ipad.html
@@ -21,7 +21,7 @@
 
     const { render, h } = setup;
 
-    render(h(() => PricesPage({ type: "", models, bottomText })), document.body);
+    render(h(() => PricesPage({ type: "iPad", models, bottomText })), document.body);
 </script>
 </body>
 </html>
