--- a/remont-ipad.html
+++ b/remont-ipad.html
@@ -14,7 +14,7 @@
 
 <script type="module">
     import models from "./prices/iPad.js";
-    import { bottomText } from "./text/iPad.js";
+    import bottomText from "./text/iPad.js";
 
     import setup from "./setup.js";
     import PricesPage from "./pages/prices.js";
