--- a/remont-macbook.html
+++ b/remont-macbook.html
@@ -14,7 +14,7 @@
 
 <script type="module">
     import models from "./prices/macbook.js";
-    import { bottomText } from "./text/macbook.js";
+    import bottomText from "./text/macbook.js";
 
     import setup from "./setup.js";
     import PricesPage from "./pages/prices.js";
