--- a/remont-apple-watch.html
+++ b/remont-apple-watch.html
@@ -14,7 +14,7 @@
 
 <script type="module">
     import models from "./prices/appleWatch.js";
-    import { bottomText } from "./text/appleWatch.js";
+    import bottomText from "./text/appleWatch.js";
 
     import setup from "./setup.js";
     import PricesPage from "./pages/prices.js";
