--- a/remont-mac-mini.html
+++ b/remont-mac-mini.html
@@ -14,7 +14,7 @@
 
 <script type="module">
     import models from "./prices/macMini.js";
-    import { bottomText } from "./text/macMini.js";
+    import bottomText from "./text/macMini.js";
 
     import setup from "./setup.js";
     import PricesPage from "./pages/prices.js";
