--- a/pravila.html
+++ b/pravila.html
@@ -14,7 +14,7 @@
 
 <script type="module">
     import setup from "./setup.js";
-    import Blog from "./pages/blog.js";
+    import Blog from "./blog/blog.js";
     import text from "./text/pravila.js";
 
     const { render, h } = setup;
